# lxqt-sudo

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  README.md  communication.cpp  communication.h  lxqt-sudo.desktop.in  lxqt-sudo_ar.ts  lxqt-sudo_ca.ts  lxqt-sudo_da.ts  lxqt-sudo_de.ts  lxqt-sudo_el.ts  lxqt-sudo_es.ts  lxqt-sudo_hu.ts  lxqt-sudo_id.ts  lxqt-sudo_it.ts  lxqt-sudo_lt.ts  lxqt-sudo_pl.ts  lxqt-sudo_pt.ts  lxqt-sudo_ru.ts  lxqt-sudo_sk.ts  lxqt-sudo_tr.ts  lxqt-sudo_zh_TW.ts  main.cpp  passworddialog.cpp  passworddialog.h  passworddialog.ui  su.cpp  sudo.cpp  sudo.h
man/: lxqt-sudo.1
translations/: lxqt-sudo.ts  lxqt-sudo_ar.ts  lxqt-sudo_arn.ts  lxqt-sudo_ast.ts  lxqt-sudo_bg.ts  lxqt-sudo_ca.ts  lxqt-sudo_cs.ts  lxqt-sudo_cy.ts  lxqt-sudo_da.ts  lxqt-sudo_de.ts  lxqt-sudo_el.ts  lxqt-sudo_el_GR.ts  lxqt-sudo_en_GB.ts  lxqt-sudo_es.ts  lxqt-sudo_et.ts  lxqt-sudo_eu.ts  lxqt-sudo_fi.ts  lxqt-sudo_fr.ts  lxqt-sudo_gl.ts  lxqt-sudo_he.ts  lxqt-sudo_hr.ts  lxqt-sudo_hu.ts  lxqt-sudo_id.ts  lxqt-sudo_it.ts  lxqt-sudo_ja.ts  lxqt-sudo_ka.ts  lxqt-sudo_kab.ts  lxqt-sudo_kk.ts  lxqt-sudo_ko.ts  lxqt-sudo_lg.ts  lxqt-sudo_lt.ts  lxqt-sudo_nb_NO.ts  lxqt-sudo_nl.ts  lxqt-sudo_oc.ts  lxqt-sudo_pa.ts  lxqt-sudo_pl.ts  lxqt-sudo_pt.ts  lxqt-sudo_pt_BR.ts  lxqt-sudo_ru.ts  lxqt-sudo_si.ts  (+8 more)
